--- a/mobile/src/main/res/xml/network_security_config.xml
+++ b/mobile/src/main/res/xml/network_security_config.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <network-security-config>
-    <base-config cleartextTrafficPermitted="true">
-        <trust-anchors>
-            <certificates src="system" />
-        </trust-anchors>
-    </base-config>
+    <domain-config cleartextTrafficPermitted="true">
+        <domain includeSubdomains="true">211.211.177.45</domain>
+    </domain-config>
 </network-security-config>
