remove test buttons

--- a/mobile/src/main/res/layout/activity_main.xml
+++ b/mobile/src/main/res/layout/activity_main.xml
@@ -45,17 +45,17 @@
         android:layout_margin="8dp"
         app:layout_constraintBottom_toBottomOf="parent">
 
-        <!-- Vibrate Watch Button -->
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/vibrateWatchButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:text="VIBRATE WATCH"
-            android:textSize="16sp"
-            android:paddingTop="12dp"
-            android:paddingBottom="12dp"
-            app:backgroundTint="#E91E63" />
+<!--         Vibrate Watch Button -->
+<!--        <com.google.android.material.button.MaterialButton-->
+<!--            android:id="@+id/vibrateWatchButton"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginTop="4dp"-->
+<!--            android:text="VIBRATE WATCH"-->
+<!--            android:textSize="16sp"-->
+<!--            android:paddingTop="12dp"-->
+<!--            android:paddingBottom="12dp"-->
+<!--            app:backgroundTint="#E91E63" />-->
 
     </LinearLayout>
 
