--- a/wear/src/main/res/layout-round/activity_main.xml
+++ b/wear/src/main/res/layout-round/activity_main.xml
@@ -3,46 +3,59 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="10dp"
     tools:context=".presentation.MainActivity"
-    tools:deviceIds="wear">
+    tools:deviceIds="wear_round"
+    >
 
-    <FrameLayout
+    <!-- Main container -->
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="5dp"
         app:layout_boxedEdges="all">
 
-        <!-- Status text at the top -->
-        <TextView
-            android:id="@+id/status_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="top|center_horizontal"
-            android:layout_marginTop="10dp"
-            android:text="Waiting for connection..."
-            android:textAlignment="center" />
+        <!-- Left direction highlight panel -->
 
-        <!-- Lottie Animation in the center -->
-        <com.airbnb.lottie.LottieAnimationView
-            android:id="@+id/vehicle_animation"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:layout_gravity="center"
-            android:visibility="gone"
-            app:lottie_autoPlay="true"
-            app:lottie_loop="true" />
+        <!-- Content container -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            >
 
-        <!-- Direction indicator at the bottom -->
-        <TextView
-            android:id="@+id/direction_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|center_horizontal"
-            android:layout_marginBottom="10dp"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            android:visibility="gone"
-            android:text="LEFT" />
-    </FrameLayout>
+            <!-- Status text at the top -->
+
+            <!-- Direction text -->
+            <TextView
+                android:id="@+id/direction_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top|center_horizontal"
+                android:layout_marginTop="0dp"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:text="Waiting for connection..."
+                android:textAlignment="center" />
+
+<!--            <TextView-->
+<!--                android:id="@+id/direction_text"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_gravity="center_horizontal"-->
+<!--                android:layout_marginTop="8dp"-->
+
+<!--                android:visibility="gone"-->
+<!--                android:text="LEFT" />-->
+
+            <!-- Lottie Animation in the center -->
+            <com.airbnb.lottie.LottieAnimationView
+                android:id="@+id/vehicle_animation"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="8dp"
+                android:visibility="gone"
+                app:lottie_autoPlay="true"
+                app:lottie_loop="true" />
+        </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.wear.widget.BoxInsetLayout>
